# dnsconfd

./: .gitignore  .packit.yaml  AGENTS.md  LICENSE  README.md  TODO  com.redhat.dnsconfd.conf  config.flake8  dnsconfd.service  dnsconfd.spec  format-code.sh  meson.build  requires.txt  setup.py
.copr/: Makefile
.github/workflows/: nightly-testing.yml
distribution/: LICENSE  com.redhat.dnsconfd.conf  com.redhat.dnsconfd.service  dnsconfd-cleanup.sh  dnsconfd-config.8  dnsconfd-prepare.sh  dnsconfd-reload.8  dnsconfd-status.8  dnsconfd-tmpfiles.conf  dnsconfd-unbound-control.conf  dnsconfd-unbound-control.path  dnsconfd-unbound-control.service  dnsconfd-unbound-control.sh  dnsconfd-unbound-tmpfiles.conf  dnsconfd-update.8  dnsconfd.8  dnsconfd.conf  dnsconfd.conf.5  dnsconfd.fc  dnsconfd.rules  dnsconfd.service  dnsconfd.service.d-unbound-anchor.conf  dnsconfd.service.d-unbound.conf  dnsconfd.spec  dnsconfd.sysconfig  dnsconfd.sysusers  dnsconfd.te  micro-dnsconfd.service  micro-dnsconfd.sysconfig  unbound-dnsconfd.conf
distribution/dracut_module/: micro_dnsconfd_no_fail.conf  module-setup.sh  unbound_dnsconfd_dependency.conf  unbound_non_empty.conf
dnsconfd/: __init__.py  argument_parser.py  cli_commands.py  dbus.py  dnsconfd_context.py  network_manager.py  nm.py  resolving_mode.py  routing_manager.py  server_manager.py  system_manager.py  systemd_manager.py
dnsconfd/configuration/: __init__.py  bool_option.py  dnsconfd_argument_parser.py  files.py  global_resolvers_option.py  interface_configuration.py  ip_option.py  option.py  server_description.py  static_servers_option.py  string_option.py  syslog_option.py
dnsconfd/dns_managers/: __init__.py  dns_manager.py  unbound_manager.py
dnsconfd/fsm/: __init__.py  context_event.py  context_state.py  dnsconfd_context.py  exit_code.py  exit_code_handler.py  shared_container.py
dnsconfd/input_modules/: __init__.py  dnsconfd_dbus_interface.py  resolve_dbus_interface.py  resolving_mode.py
dnsconfd/network_objects/: __init__.py  dns_protocol.py  interface_configuration.py  reverse_domains.py  server_description.py
docs/: com.redhat.dnsconfd.md  conf.py  dnsconfd.configuration.rst  dnsconfd.dns_managers.rst  dnsconfd.fsm.rst  dnsconfd.input_modules.rst  dnsconfd.network_objects.rst  dnsconfd.rst  generate_fsm.py  index.rst  modules.rst
micro-dnsconfd/: CMakeLists.txt  arg-parsing.c  arg-parsing.h  dbus-handling.c  dbus-handling.h  file-utilities.c  file-utilities.h  micro-dnsconfd.c  nm-config-parsing.c  nm-config-parsing.h  output-handling.c  output-handling.h  uri-parsing.c  uri-parsing.h
micro-dnsconfd/tests/: runtests.c  test-nm-config-parsing.c  test-nm-config-parsing.h  test-uri-parsing.c  test-uri-parsing.h
plans/: distribution.fmf  imagemode.fmf  integration.fmf  multihost.fmf  unit.fmf
src/: dbus_server.c  dbus_server.h  dnsconfd_config.h  ip_utilities.c  ip_utilities.h  log_utilities.c  log_utilities.h  main.c  service_management.c  service_management.h
src/cli_commands/: cli_common.c  cli_common.h  cli_config.c  cli_config.h  cli_reload.c  cli_reload.h  cli_status.c  cli_status.h  cli_update.c  cli_update.h  print_utils.c  print_utils.h
src/configuration_parsing/: config_command.c  config_command.h  (+13 more)
tests/: Dockerfile  bind_entry.sh  build_images.sh  build_ostree.sh  build_package.sh  dhcp.Dockerfile  dhcp_entry.sh  dhcpd-common.conf  dhcpd-empty.conf  dnsconfd-test-utilities.Dockerfile  dnsconfd.Dockerfile  dnsconfd_helper_functions.sh  dnsconfd_lib.sh  dnsconfd_start.service  dnsmasq.Dockerfile  dnsmasq_entry.sh  named.conf  named2.conf  radvd.conf  ratool.conf  ratool_entry.sh  test_dnsconfd_context.py  test_nm.py  test_reverses.py  test_server.py  vpn.Dockerfile  vpn.conf  vpn_entry.sh
unittests/: meson.build  test_ip_utilities.c  test_server_uri.c  test_unbound_manager.c
unittests/configuration/: test_bool_option.py  test_dnsconfd_argument_parser.py  test_ip_option.py  test_static_servers_option.py  test_string_option.py  test_syslog_option.py
unittests/dns_managers/: test_unbound_manager.py
unittests/network_objects/: test_server_description.py
(+170 files in other folders)
